# pixy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  pixy.toml.sample
.github/workflows/: package-manifests.yml  release-smoke.yml  release.yml  rust.yml
.pi-rs/sessions/: 1771734329869_session-1771734329869.jsonl  1771734614096_session-1771734614096.jsonl  1771734614782_session-1771734614782.jsonl  1771734626947_session-1771734626947.jsonl  1771734688894_session-1771734688894.jsonl  1771734772391_session-1771734772391.jsonl  1771734935572_session-1771734935572.jsonl  1771734947625_session-1771734947625.jsonl  1771735011068_session-1771735011068.jsonl
crates/pi-agent-core/: Cargo.toml
crates/pi-agent-core/src/: agent.rs  agent_loop.rs  lib.rs  types.rs
crates/pi-agent-core/tests/: agent.rs  agent_loop.rs
crates/pi-ai/: Cargo.toml
crates/pi-ai/src/: error.rs  lib.rs  stream.rs  types.rs
crates/pi-ai/src/providers/: bedrock_converse_stream.rs  google_generative_ai.rs  mod.rs  openai_compat.rs  openai_completions.rs  openai_responses.rs
crates/pi-ai/tests/: google_bedrock_providers.rs  provider_fixtures.rs  registry_and_stream.rs  types_and_event_stream.rs  validation.rs
crates/pi-coding-agent/: Cargo.toml
crates/pi-coding-agent/src/: agent_session.rs  main.rs  messages.rs  session_manager.rs  system_prompt.rs  tools.rs  tui_backend.rs
crates/pi-coding-agent/src/tools/: bash.rs  common.rs  edit.rs  mod.rs  read.rs  write.rs
crates/pi-coding-agent/tests/: abort_streaming.rs  agent_session.rs  messages.rs  resume.rs  session_manager.rs  tools.rs
crates/pi-tui/: Cargo.toml
crates/pi-tui/src/: backend.rs  keybindings.rs  lib.rs  options.rs  theme.rs  transcript.rs
crates/pi-tui/tests/: public_modules.rs
crates/pi-tui/themes/: dark.json  light.json
crates/pixy-agent-core/: Cargo.toml
crates/pixy-agent-core/src/: agent.rs  agent_loop.rs  lib.rs  types.rs
crates/pixy-agent-core/tests/: agent.rs  agent_loop.rs
crates/pixy-ai/: Cargo.toml
crates/pixy-ai/src/: api_registry.rs  error.rs  event_stream.rs  lib.rs  stream.rs  transport_retry.rs  types.rs  validation.rs
crates/pixy-ai/src/providers/: anthropic.rs  bedrock_converse_stream.rs  common.rs  google_gemini_cli.rs  google_generative_ai.rs  google_vertex.rs  mod.rs  openai_compat.rs  openai_completions.rs  openai_responses.rs  reliable.rs
crates/pixy-ai/src/providers/anthropic/: mod.rs  parser.rs  payload.rs  provider.rs
crates/pixy-ai/tests/: google_bedrock_providers.rs  provider_fixtures.rs  registry_and_stream.rs  types_and_event_stream.rs  validation.rs
crates/pixy-ai/tests/fixtures/m1-provider/: anthropic-tooluse.json  openai-tooluse.json
crates/pixy-coding-agent/: Cargo.toml
crates/pixy-coding-agent/src/: agent_session.rs  agent_session_services.rs  bash_command.rs  cli.rs  cli_app.rs  lib.rs  main.rs  memory_tool.rs  messages.rs  permission.rs  runtime_config.rs  session_manager.rs  skills.rs  system_prompt.rs  tui_backend.rs
crates/pixy-coding-agent/src/memory/: config.rs  file_store.rs  memory.rs  mod.rs  search.rs
crates/pixy-coding-agent/src/multi_agent/: declarative_hooks.rs  dispatcher.rs  hooks.rs  mod.rs  plugin_loader.rs  plugin_manifest.rs  plugin_runtime.rs  policy.rs  registry.rs  session_store.rs  task_tool.rs  types.rs
crates/pixy-coding-agent/src/tools/: bash.rs  common.rs  edit.rs  list_directory.rs  mod.rs  read.rs  write.rs
crates/pixy-coding-agent/tests/: abort_streaming.rs  agent_session.rs  memory_module.rs  memory_tool.rs  messages.rs  multi_agent_task_flow.rs  resume.rs  session_manager.rs  tools.rs
crates/pixy-coding-agent/tests/unit/: cli_unit.rs
crates/pixy-gateway/: Cargo.toml
crates/pixy-gateway/src/: config.rs  lib.rs  main.rs  runtime.rs
crates/pixy-gateway/src/channels/: feishu.rs  mod.rs  telegram.rs
crates/pixy-main/: Cargo.toml
crates/pixy-main/src/: config_cmd.rs  doctor.rs  main.rs  pixy_home.rs  update_cmd.rs
crates/pixy-main/tests/: cli_e2e.rs  config_init.rs
crates/pixy-tui/: Cargo.toml
crates/pixy-tui/src/: backend.rs  constants.rs  keybindings.rs  lib.rs  options.rs  resume.rs  runtime.rs  terminal.rs  theme.rs  transcript.rs
crates/pixy-tui/tests/: public_modules.rs
crates/pixy-tui/tests/unit/: lib_unit.rs
crates/pixy-tui/themes/: dark.json  light.json
examples/multi-agent/: README.md  basic-plugin.toml  pixy.toml
examples/multi-agent-hooks/: README.md  basic-plugin.toml  pixy.toml
examples/multi-agent-mission-plugin/: README.md  pixy.toml
examples/multi-agent-mission-plugin/agents/: review.toml
examples/multi-agent-mission-plugin/plugins/: mission-plugin.toml
examples/multi-agent-mission-plugin/plugins/agents/: code.toml
scripts/: bootstrap.sh  generate-package-manifests.sh  install.ps1  install.sh  onboard.sh
