[package]
name = "pi-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pi-ai = { path = "../pi-ai" }
serde_json = "1.0"
tokio = { version = "1.49", features = ["macros", "rt", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
