[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
pi-ai = { path = "../pi-ai" }
pi-agent-core = { path = "../pi-agent-core" }
pi-tui = { path = "../pi-tui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "process", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3.13"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
