[package]
name = "pixy-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
pixy-ai = { path = "../pixy-ai" }
serde_json = "1.0"
tokio = { version = "1.49", features = ["macros", "rt", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
