[package]
name = "pixy-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jsonschema = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "time"] }
