[package]
name = "pixy-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pixy-cli"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
pixy-ai = { path = "../pixy-ai" }
pixy-agent-core = { path = "../pixy-agent-core" }
pixy-tui = { path = "../pixy-tui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shlex = "1.3"
tokio = { version = "1.48", features = ["macros", "process", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.13"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
