[package]
name = "pixy-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pixy-gateway"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
pixy-coding-agent = { path = "../pixy-coding-agent" }
pixy-ai = { path = "../pixy-ai" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.13"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
