[package]
name = "pixy-main"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pixy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pixy-coding-agent = { path = "../pixy-coding-agent" }
pixy-gateway = { path = "../pixy-gateway" }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
